Fix connection issues after testing integration locally